# Set sources in the src directory
file(GLOB SOURCES "*.cpp")
file(GLOB SOURCES "*.c")

add_executable(textcpp test.cpp)
add_executable(ForEach ForEach.cpp)
add_executable(swaps swaps.cpp)
add_executable(Hexample exampleH.cpp)
add_executable(Overloading Overloading.cpp)
add_executable(Overloading2 Overloading2.cpp)
add_executable(InHerr InHerr.cpp)
add_executable(InfosysQ infosysQ.cpp)
add_executable(ExH ExecptionH.cpp)
add_executable(FriendFunc FriendFunc.cpp)
add_executable(FriendFunc2 FriendFunc2.cpp)
add_executable(DynamicMem DynamicMem.cpp)
add_executable(FileH FileH.cpp)
add_executable(FileH2 FileH2.cpp)
add_executable(Story ProblemS1.cpp)
add_executable(MergeSort MergeSort.cpp)
add_executable(Tree1 Tree1.cpp)
add_executable(MirrorTree MirrorTree.cpp)
add_executable(RatTraversal RatTraversal.cpp)
